# Py_xDH

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  Dockerfile  MANIFEST.in  README.md  environment.yml  note_on_sphinx.txt  pyproject.toml  readthedocs.yml  requirements.txt  requirements.yml  setup.py
.github/workflows/: pypadeploy.yml  pythonpackage.yml
docs/: Makefile  make.bat  requirements.yml
docs/source/: conf.py  dft_nuc_hess.ipynb  hf_nuc_grad.ipynb  index.rst  install.rst  motive.rst  nonconsistent_gga_grad.ipynb  ref.bib
pyxdh/: .pyscf_conf.py  __init__.py
pyxdh/DerivOnce/: __init__.py  deriv_once_df.py  deriv_once_mp2.py  deriv_once_r.py  deriv_once_rdf.py  deriv_once_scf.py  deriv_once_u.py  deriv_once_ump2.py  deriv_once_uscf.py  dipole_mp2.py  dipole_r.py  dipole_scf.py  dipole_u.py  dipole_ump2.py  dipole_uscf.py  grad_df.py  grad_dfscf.py  grad_mp2.py  grad_r.py  grad_rdf.py  grad_scf.py  grad_u.py  grad_ump2.py  grad_uscf.py
pyxdh/DerivTwice/: __init__.py  deriv_twice_mp2.py  deriv_twice_r.py  deriv_twice_rdf.py  deriv_twice_scf.py  deriv_twice_u.py  deriv_twice_ump2.py  deriv_twice_uscf.py  dipderiv_mp2.py  dipderiv_r.py  dipderiv_scf.py  hess_mp2.py  hess_r.py  hess_rdf.py  hess_scf.py  hess_u.py  hess_ump2.py  hess_uscf.py  polar_mp2.py  polar_r.py  polar_scf.py  polar_u.py  polar_ump2.py  polar_uscf.py
source/: conf.py  dft_nuc_hess.ipynb  hf_elec_grad.ipynb  hf_nuc_grad.ipynb  hf_nuc_hess.ipynb  index.rst  install.rst  mp2_energy.ipynb  numpy_quick.rst  xyg3_energy.ipynb
(+161 files in other folders)
