[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxdh"
version = "v0.0.7"
authors = [
    {name = "ajz34", email = "ajz34@outlook.com"},
]
description = "Document and code of python and PySCF approach XYG3 type of density functional realization"
readme = "README.md"
requires-python = ">=3.8, <3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pyscf==1.7.5",
    "h5py==3.0",
    "scipy==1.4.1",
    "numpy==1.18",
    "opt_einsum",
    "jupyter",
    "sphinx",
    "nbsphinx",
    "pyberny",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex",
    "jupyter_contrib_nbextensions",
    "pandoc",
    "matplotlib",
    "docopt",
    "codecov",
    "pytest-cov",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"pyxdh.Validation.numerical_deriv" = ["*.dat"]
"pyxdh.Validation.gaussian" = ["*.fchk"]

[project.urls]
Homepage = "https://github.com/ajz34/Py_xDH"
Documentation = "https://py-xdh.rtfd.io"
